added TreeQSM matlab integration

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(clean_las)
 export(convex_hull_2D)
+export(default_qsm_inputs)
 export(get_area_profile)
 export(get_crown_base)
 export(get_crown_volume_alpha)
@@ -9,16 +10,20 @@ export(get_crown_volume_voxel)
 export(get_dbh)
 export(get_height)
 export(get_width)
+export(las_to_mat)
 export(normalize_las)
 export(recenter_las)
 export(rotate_las_z)
+export(run_qsm)
 export(segment_crown)
 export(voxel_hull_2D)
 import(data.table)
 importFrom(ITSMe,alpha_volume_pc)
+importFrom(R.matlab,writeMat)
 importFrom(TreeLS,shapeFit)
 importFrom(TreeLS,stemPoints)
 importFrom(dplyr,filter)
+importFrom(dplyr,select)
 importFrom(lidR,add_lasattribute)
 importFrom(lidR,classify_noise)
 importFrom(lidR,filter_duplicates)
@@ -28,6 +33,7 @@ importFrom(lidR,las_update)
 importFrom(lidR,rasterize_density)
 importFrom(lidR,voxelize_points)
 importFrom(magrittr,`%>%`)
+importFrom(readtext,readtext)
 importFrom(recexcavAAR,rotate)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_convex_hull)
