--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(clean_las)
 export(convex_hull_2D)
 export(default_qsm_inputs)
 export(get_area_profile)
+export(get_center_of_mass)
 export(get_crown_base)
 export(get_crown_volume_alpha)
 export(get_crown_volume_voxel)
@@ -11,6 +12,7 @@ export(get_dbh)
 export(get_height)
 export(get_width)
 export(las_to_mat)
+export(load_qsm)
 export(normalize_las)
 export(recenter_las)
 export(rotate_las_z)
@@ -22,8 +24,11 @@ importFrom(ITSMe,alpha_volume_pc)
 importFrom(R.matlab,writeMat)
 importFrom(TreeLS,shapeFit)
 importFrom(TreeLS,stemPoints)
+importFrom(aRchi,read_QSM)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,summarize)
 importFrom(lidR,add_lasattribute)
 importFrom(lidR,classify_noise)
 importFrom(lidR,filter_duplicates)
