documentation, preprocessing + pointcloud traits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_crown_volume_voxel)
 export(get_dbh)
 export(get_height)
 export(get_primary_branches)
+export(get_stem_tilt)
 export(get_width)
 export(internode_distances)
 export(las_to_mat)
@@ -47,6 +48,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplotify,as.ggplot)
 importFrom(ggpubr,ggarrange)
 importFrom(lidR,add_lasattribute)
 importFrom(lidR,classify_noise)
