--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,27 @@ Package: tReeTraits
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Jeffery B. Cannon (jeffery.cannon@jonesctr.org)
+Maintainer: effery B. Cannon <jeffery.cannon@jonesctr.org>
+Description: This package integrates several functions for measuring tree architecture from Terrestrial lidar data, including tree properties, crown properties, and tree architecture from a QSM. 
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Imports:
   data.table,
-  lidR
-  
+  lidR,
+  ITSMe,
+  R.matlab,
+  TreeLS,
+  aRchi,
+  dplyr,
+  ggplot2,
+  ggpubr,
+  magrittr,
+  readtext,
+  recexcavAAR,
+  sf,
+  spanner,
+  terra,
+  tibble
